# LVI-SAM

./: CMakeLists.txt  README.md
config/: M2DGR_lidar.yaml
launch/: M2DGR.launch
launch/include/: module_sam.launch  module_sam_lidar.launch  module_sam_seg.launch
launch/include/config/: rviz.rviz
msg/: image_depth.msg
pcd/: cloudCorner.pcd  trajectory.pcd  transformations.pcd
src/lidar_odometry/: featureExtraction.cpp  gpsOdometry.cpp  imuPreintegration.cpp  mapOptmization.cpp  mapRegister.cpp  mapRegister_lidar.cpp  utility.h
src/visual_odometry/visual_feature/: feature_tracker.h
